26 Aug 2018 Added documentation comments to the Program.cs file

--- a/adapman/Properties/Resources.resx
+++ b/adapman/Properties/Resources.resx
@@ -165,4 +165,7 @@ OPTIONS:
   <data name="WifiAdapterAlreadyDisconnected" xml:space="preserve">
     <value>The Wi-Fi adapter is already in the disconnected state.</value>
   </data>
+  <data name="UnandledExceptionError" xml:space="preserve">
+    <value>Unable to process the requested operation. {0}.  Try to call this program again.</value>
+  </data>
 </root>
